404 page not found DONE

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
 	<body>
         <h1>Bienvenue sur Matcha<br/> le site de soul_match !</h1>
         <p>Aujourd'hui nous sommes le {{date}}, c'est un bon jour pour trouver ton soul_match!</p>
+
+		{% include 'menu.html' %}
+
         
     </body>
 </html>
