--- a/templates/messenger.html
+++ b/templates/messenger.html
@@ -3,7 +3,7 @@
 
 	{% extends 'layouts/default.html' %}
 	
-	{% block title %}Login &middot; {{ super() }}{% endblock title %}
+	{% block title %}Messages &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
 	{% endblock body %}
