--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -2,7 +2,7 @@
 <html>
 	<footer>
 		<hr/>
-		<p>&copy; Copyright ssumodhe {{now_year}} &middot; All right reserved.</p>
+		<p>&copy; Copyright ssumodhe &amp; tpayet {{now_year}} &middot; All right reserved.</p>
 		<img width='45px' src="{{ url_for('static', filename='emoji_kitty.png') }}"/>
 	</footer>
 </html>
