--- a/static/my_style.css
+++ b/static/my_style.css
@@ -9,5 +9,5 @@ html{
     /*background: linear-gradient(to right, #70e1f5, #ffd194); */
     /*Dance To Forget*/
     /*background: linear-gradient(to right, #ff4e50, #f9d423); */
-    background-color: #e6ffe6;
+    background-color: #ff9999;
 }
