--- a/templates/layouts/menu.html
+++ b/templates/layouts/menu.html
@@ -2,9 +2,9 @@
 <html>
 <nav>
 	<ul>
-		<li><a href="{{ url_for('home') }}"><i class="em em-love_hotel"></i> Home</a></li>
-		<li><a href="{{ url_for('compte') }}"><i class="em em-spiral_note_pad"></i> Compte</a></li>
-		<li><a href="{{ url_for('messenger') }}"> <i class="em em-love_letter"></i> Messenger</a></li>
+		<li><a href="{{ url_for('home') }}"><i class="em em-love_hotel"></i> Home </a></li>
+		<li><a href="{{ url_for('profile') }}"><i class="em em-spiral_note_pad"></i> Profile </a></li>
+		<li><a href="{{ url_for('messenger') }}"> <i class="em em-love_letter"></i> Messenger </a></li>
 	</ul>
 </nav>
 </html>
