root_controller: signin BackCheck DONE

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 	{% block title %}Home &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
+		<p>{{form}}</p>
 	{% endblock body %}
 
         
