root_controller: signin session/cookie DONE & signout (del session) DONE

--- a/templates/layouts/menu.html
+++ b/templates/layouts/menu.html
@@ -4,7 +4,8 @@
 	<ul>
 		<li><a href="{{ url_for('home') }}"><i class="em em-love_hotel"></i> Home </a></li>
 		<li><a href="{{ url_for('profile') }}"><i class="em em-spiral_note_pad"></i> Profile </a></li>
-		<li><a href="{{ url_for('messenger') }}"> <i class="em em-love_letter"></i> Messenger </a></li>
+		<li><a href="{{ url_for('messenger') }}"><i class="em em-love_letter"></i> Messenger </a></li>
+		<li><a href="{{ url_for('signout') }}"><img src=static/deco_button.png width="20px" height="20px"></a></li>
 	</ul>
 </nav>
 </html>
