--- a/templates/layouts/default.html
+++ b/templates/layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='logo-matcha.png') }}" />
 	
 	<title>{% block title %}Matcha{% endblock title %}</title>
-
+	{% block script %}{% endblock script %}
 </head>
 
 <body>
