--- a/templates/index.html
+++ b/templates/index.html
@@ -31,19 +31,19 @@
         <div>
         <form name="signup" method="post" action="/signup">
             <p>Pas encore inscrit ?</p>
-            Votre pseudo : <input type="text" name="username" placeholder="Pseudo" required/>
+            Votre pseudo : <input type="text" name="username" placeholder="Pseudo" required onblur="checkUsername()" />
             <br/>
-            Votre prénom : <input type="text" name="first_name" placeholder="Prénom" required/>
+            Votre prénom : <input type="text" name="first_name" placeholder="Prénom" required onblur="checkInputs('0')"/>
             <br/>
-            Votre nom : <input type="text" name="last_name" placeholder="Nom" required/>
+            Votre nom : <input type="text" name="last_name" placeholder="Nom" required onblur="checkInputs('0')"/>
             <br/>
-            Votre e-mail : <input type="text" name="email" placeholder="Adresse mail" required/>
+            Votre e-mail : <input type="email" name="email" placeholder="Adresse mail" required onblur="checkEmail()"/>
             <br/>
-            Votre mot de passe : <input type="password" name="password" placeholder=" &middot; &middot; &middot;" required/>
+            Votre mot de passe : <input type="password" name="password" placeholder=" &middot; &middot; &middot;" required onblur="checkInputs('0')"/>
             <br/>
-            Confirmez votre mot de passe : <input type="password" name="password_2" placeholder=" &middot; &middot; &middot;" required/>
+            Confirmez votre mot de passe : <input type="password" name="password_2" placeholder=" &middot; &middot; &middot;" required onkeydown="checkLastInputs('0', 'password_2')"/>
             <br/>
-            <input type="submit" name="sign_up" value="Je m'inscris !" disabled />
+            <input type="submit" name="submit" value="Je m'inscris !" disabled />
         </form>
         </div>
             
@@ -53,13 +53,13 @@
         <div>
         <form name="signin" method="post" action="/signin">
             <p> Déjà inscrit ?</p>
-            Votre pseudo : <input type="text" name="username" placeholder="Pseudo" required="Veuillez remplir ce champs"/>
+            Votre pseudo : <input type="text" name="username" placeholder="Pseudo" required onblur="checkInputs('1')"/>
             <br/>
-            Votre mot de passe : <input type="password" name="password" placeholder=" &middot; &middot; &middot;" required="Veuillez remplir ce champs"/>
+            Votre mot de passe : <input type="password" name="password" placeholder=" &middot; &middot; &middot;" required onfocus="checkLastInputs('1', 'password')"/>
             <br/>
             <a href="#"> Mot de passe oublié?</a>
             <br/>
-            <input type="submit" name="sign_in" value="Go !" disabled />
+            <input type="submit" name="submit" value="Go !" disabled />
         </form>
         </div>
     
