index-form : JSchecks & CSS | missing checks with DB and tiny bug with submit button in form signup

--- a/static/my_style.css
+++ b/static/my_style.css
@@ -38,4 +38,10 @@ input {
 #form_error{
     background-color: rgba(199, 0, 57, 0.4);
     font-size: 50%;
+    display: block;
+}
+
+#form_info{
+    font-size: 50%;
+    display: block;
 }
