--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 	{% block title %}Home &middot; {{ super() }}{% endblock title %}
 
 	{% block body %}
+		<p>On est sur la page Home</p>
 		<p>{{user}}</p>
 	{% endblock body %}
 
