--- a/templates/layouts/menu.html
+++ b/templates/layouts/menu.html
@@ -3,9 +3,9 @@
 <nav>
 	<ul>
 		<li><a href="{{ url_for('home') }}"><i class="em em-love_hotel"></i> Home </a></li>
-		<li><a href="{{ url_for('profile') }}"><i class="em em-spiral_note_pad"></i> Profile </a></li>
+		<li><a href="{{ url_for('profile', username=session['user']) }}"><i class="em em-spiral_note_pad"></i> Profile </a></li>
 		<li><a href="{{ url_for('messenger') }}"><i class="em em-love_letter"></i> Messenger </a></li>
-		<li><a href="{{ url_for('signout') }}"><img src=static/deco_button.png width="20px" height="20px"></a></li>
+		<li><a href="{{ url_for('signout') }}"><img src="{{ url_for('static', filename='deco_button.png') }}" width="20px" height="20px"></a></li>
 	</ul>
 </nav>
 </html>
