profile : getting infos on user to page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,16 @@
 
 
 	{% block body %}
+	<p>{{ infos['username'] }}</p>
+	<p>{{ infos['first_name'] }}</p>
+	<p>{{ infos['last_name'] }}</p>
+	<p>{{ infos['email'] }}</p>
+	<p>{{ infos['sex'] }}</p>
+	<p>{{ infos['orientation'] }}</p>
+	<p>{{ infos['bio'] }}</p>
+	<p>{{ infos['interests'] }}</p>
+	<p>{{ infos['pop_score'] }}</p>
+	<p>{{ infos['last_connexion'] }}</p>
 	{% endblock body %}
 
         
