--- a/static/my_style.css
+++ b/static/my_style.css
@@ -16,6 +16,10 @@ hr{
     color: black;
 }
 
+div{
+    border-style: solid;
+}
+
 #index-login{
     margin-bottom: 30px;
     display: inline-flex;
@@ -44,4 +48,23 @@ input {
 #form_info{
     font-size: 50%;
     display: block;
+}
+
+#main{
+    display: flex;
+}
+
+#box_left{
+    margin: 5px 10px 5px 10px;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+#box_right{
+    margin: 5px 10px 5px 10px;
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
