--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,16 +7,34 @@
 
 
 	{% block body %}
-	<p>{{ infos['username'] }}</p>
-	<p>{{ infos['first_name'] }}</p>
-	<p>{{ infos['last_name'] }}</p>
-	<p>{{ infos['email'] }}</p>
-	<p>{{ infos['sex'] }}</p>
-	<p>{{ infos['orientation'] }}</p>
-	<p>{{ infos['bio'] }}</p>
-	<p>{{ infos['interests'] }}</p>
-	<p>{{ infos['pop_score'] }}</p>
-	<p>{{ infos['last_connexion'] }}</p>
+	
+		<div>
+		<p>{{ infos['username'] }}</p>
+		<p>{{ infos['first_name'] }}</p>
+		<p>{{ infos['last_name'] }}</p>
+		</div>
+<div id="main" style="">
+		<div id="box_left">
+		<p>{{ infos['email'] }}</p>
+		<p>{{ infos['sex'] }}</p>
+		<p>{{ infos['orientation'] }}</p>
+		</div>
+		
+		<div id="box_right">
+		<!-- 	<p>{{ infos['bio'] }}</p>
+			<p>{{ infos['interests'] }}</p>
+			<p>{{ infos['pop_score'] }}</p>
+			<p>{{ infos['last_connexion'] }}</p> -->
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+			<img width='150px' height='150px' src="https://www.google.fr/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiF4p-cstDYAhXHoKQKHVifAukQjRx6BAgAEAY&url=https%3A%2F%2Fpixabay.com%2Ffr%2Fretouche-d-image-ebv-unleashed-101040%2F&psig=AOvVaw2tp2vhaGn7U-H2jFeupWQy&ust=1515776658437731"/>
+		</div>
+	</div>
 	{% endblock body %}
 
         
