getting geoloc infos

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
 
 	
     {% block title %}Login &middot; {{ super() }}{% endblock title %}
-	{% block script %}<script type="text/javascript" src="static/index-controller.js"></script>{% endblock script %}
+	{% block script %}
+    <script type="text/javascript" src="static/index-controller.js"></script>
+    {% endblock script %}
 
 
 	{% block body %}
