--- a/static/my_style.css
+++ b/static/my_style.css
@@ -50,7 +50,7 @@ input {
     display: block;
 }
 
-#main{
+#main_container{
     display: flex;
 }
 
@@ -66,5 +66,11 @@ input {
     width: 70%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+
+#box_right img{
+    margin: 5px 0px 5px 0px;
+    border-style: solid;
+    border-color: gainsboro;
 }
