--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -5,9 +5,12 @@
 {% block body %}
 <h1>Error 404</h1>
 
+	<img src="{{ url_for('static', filename='unicorn_vnr.png') }}">
+
 
 <p>It seems like you're lost.
 	<br/>Go back to the <a href="{{ url_for('accueil')}}">home page<br/>
 	<i class="em em-back"></i></a>
+
 </p>
 {% endblock body %}
