--- a/static/my_style.css
+++ b/static/my_style.css
@@ -86,6 +86,8 @@ input {
     width: 70%;
     text-align: left;
     padding-left: 10%;
+    display: flex;
+    flex-direction: column;
     border-color: black;/* A VIRER !! */
 }
 
